--- a/Source/Frontend/digitr/package.json
+++ b/Source/Frontend/digitr/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
+    "build": "ionic-app-scripts build --prod && rm -rf ../../../docs && mv www ../../../docs",
+    "lint": "ionic-app-scrpts lint"
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
