--- a/Source/Frontend/digitr/package.json
+++ b/Source/Frontend/digitr/package.json
@@ -1,13 +1,13 @@
 {
   "name": "digitr",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "version": "3.0.0",
+  "author": "Eaideas, LLC",
+  "homepage": "https://digitrapp.com/",
   "private": true,
   "scripts": {
     "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build --prod && rm -rf ../../../docs && mv www ../../../docs",
+    "build": "ionic-app-scripts build --prod --aot=false && rm -rf ../../../docs && mv www ../../../docs",
     "lint": "ionic-app-scrpts lint"
   },
   "dependencies": {
@@ -21,11 +21,21 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.10.0",
+    "@ionic-native/google-plus": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
     "@types/gapi": "0.0.36",
     "@types/gapi.auth2": "0.0.47",
+    "angular5-svg-round-progressbar": "^1.0.2-release",
+    "cordova-ios": "^4.5.5",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-googleplus": "5.3.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -36,5 +46,22 @@
     "@ionic/app-scripts": "3.1.11",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1089587494564-63vl8kls1v7jc3qlgrmn087ponappo6q",
+        "WEB_APPLICATION_CLIENT_ID": "1089587494564-63vl8kls1v7jc3qlgrmn087ponappo6q.apps.googleusercontent.com"
+      }
+    },
+    "platforms": [
+      "ios"
+    ]
+  }
 }
