--- a/Source/Frontend/digitr/package.json
+++ b/Source/Frontend/digitr/package.json
@@ -22,22 +22,28 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/google-plus": "^4.11.0",
+    "@ionic-native/push": "^4.11.0",
+    "@ionic-native/screen-orientation": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
     "@types/gapi": "0.0.36",
     "@types/gapi.auth2": "0.0.47",
+    "angular-svg-round-progressbar": "^1.1.0",
     "angular5-svg-round-progressbar": "^1.0.2-release",
-    "cordova-ios": "^4.5.5",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-googleplus": "5.3.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "phonegap-plugin-push": "^2.2.3",
+    "progressbar.js": "^1.0.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -58,7 +64,9 @@
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1089587494564-63vl8kls1v7jc3qlgrmn087ponappo6q",
         "WEB_APPLICATION_CLIENT_ID": "1089587494564-63vl8kls1v7jc3qlgrmn087ponappo6q.apps.googleusercontent.com"
-      }
+      },
+      "phonegap-plugin-push": {},
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "ios"
