--- a/Source/Backend/requirements.txt
+++ b/Source/Backend/requirements.txt
@@ -11,14 +11,17 @@ lazy-object-proxy==1.3.1
 mccabe==0.6.1
 oauth2-google-login==1.0.0
 oauthlib==2.1.0
+pdb-clone==1.10.1
 pyasn1==0.4.3
 pyasn1-modules==0.2.2
 pylint==2.0.1
 pymongo==3.7.1
 requests==2.19.1
 requests-oauthlib==1.0.0
+rope==0.11.0
 rsa==3.4.2
 selenium==3.13.0
+SimpleWebSocketServer==0.1.0
 six==1.11.0
 typed-ast==1.1.0
 urllib3==1.23
