--- a/Source/Backend/requirements.txt
+++ b/Source/Backend/requirements.txt
@@ -1,8 +1,11 @@
+asn1crypto==0.24.0
 astroid==2.0.1
 beautifulsoup4==4.6.0
 cachetools==2.1.0
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
+cryptography==2.3.1
 google==2.0.1
 google-auth==1.5.0
 idna==2.7
@@ -11,18 +14,21 @@ lazy-object-proxy==1.3.1
 mccabe==0.6.1
 oauth2-google-login==1.0.0
 oauthlib==2.1.0
+paypalrestsdk==1.13.1
 pdb-clone==1.10.1
 pyasn1==0.4.3
 pyasn1-modules==0.2.2
+pycparser==2.18
 pylint==2.0.1
 pymongo==3.7.1
+pyOpenSSL==18.0.0
 requests==2.19.1
 requests-oauthlib==1.0.0
 rope==0.11.0
 rsa==3.4.2
 selenium==3.13.0
+SimpleWebSocketServer==0.1.0
 six==1.11.0
 typed-ast==1.1.0
 urllib3==1.23
-websocket-server==0.4
 wrapt==1.10.11
