--- a/Source/Frontend/digitr/package.json
+++ b/Source/Frontend/digitr/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/router": "^6.1.4",
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/google-plus": "^4.11.0",
     "@ionic-native/push": "^4.11.0",
