--- a/Source/Frontend/digitr/package.json
+++ b/Source/Frontend/digitr/package.json
@@ -32,6 +32,7 @@
     "angular-svg-round-progressbar": "^1.1.0",
     "angular5-svg-round-progressbar": "^1.0.2-release",
     "cordova-ios": "4.5.5",
+    "cordova-osx": "4.0.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-googleplus": "5.3.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -69,7 +70,8 @@
       "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "osx"
     ]
   }
 }
