--- a/Source/Frontend/digitr/package.json
+++ b/Source/Frontend/digitr/package.json
@@ -70,8 +70,8 @@
       "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
-      "ios",
-      "osx"
+      "osx",
+      "ios"
     ]
   }
 }
