--- a/Source/Frontend/digitr/package.json
+++ b/Source/Frontend/digitr/package.json
@@ -41,7 +41,9 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "ionic": "^4.12.0",
     "ionic-angular": "3.9.2",
+    "ionic-cli": "0.0.0",
     "ionicons": "3.0.0",
     "phonegap-plugin-push": "^2.2.3",
     "progressbar.js": "^1.0.1",
@@ -50,7 +52,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.11",
+    "@ionic/app-scripts": "^3.2.3",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
