--- a/Source/Frontend/digitr/ionic.config.json
+++ b/Source/Frontend/digitr/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "Digitr",
   "integrations": {
-    "cordova": {}
+    "cordova": {},
+    "capacitor": {}
   },
   "type": "ionic-angular"
 }
