--- a/Source/Frontend/digitr/package.json
+++ b/Source/Frontend/digitr/package.json
@@ -20,8 +20,11 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.10.0",
-    "@ionic-native/google-plus": "^4.11.0",
+    "@capacitor/cli": "1.5.0",
+    "@capacitor/core": "1.5.0",
+    "@capacitor/ios": "^1.5.1",
+    "@ionic-native/core": "^4.20.0",
+    "@ionic-native/google-plus": "^4.20.0",
     "@ionic-native/push": "^4.11.0",
     "@ionic-native/screen-orientation": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
