--- a/Source/Frontend/digitr/package.json
+++ b/Source/Frontend/digitr/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/screen-orientation": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
+    "@ionic/cli": "^6.17.1",
     "@ionic/storage": "2.1.3",
     "@types/gapi": "0.0.36",
     "@types/gapi.auth2": "0.0.47",
